--- a/HTM-CSS-COURSE/Lesson5/text.html
+++ b/HTM-CSS-COURSE/Lesson5/text.html
@@ -7,7 +7,7 @@
 
   .video-title {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 18px; 
     width: 280px;
     line-height: 23px;
     margin-bottom: 5px;
@@ -30,6 +30,26 @@
     color: rgb(96, 96, 96);
     width: 280px;
     line-height: 22px;
+    margin-bottom: 100px;
+  }
+
+  .apple-text {
+    margin-bottom: 50px;
+    font-size: 14px;
+    background-color: rgb(227, 65, 64);
+    color: white;
+    text-align: center;
+    padding-top: 18px;
+    padding-bottom: 18px;
+  }
+
+  .shopNow-link {
+    cursor: pointer;
+    transition: text-decoration 0.15s;
+    margin-left: 2px;
+  }
+  .shopNow-link:hover {
+    text-decoration: underline;
   }
 </style>
 
@@ -49,4 +69,9 @@
   Talking tech and AI on the heels of Google I/O. 
   Also a daily driver phone reveal from Google's CEO. 
   Shoutout to Sundar!
+</p>
+
+<p class="apple-text">
+  Shop early for the best selection of holiday favourites. 
+  <span class="shopnow-link">Shop now &gt;</span>
 </p>
