--- a/HTM-CSS-COURSE/youtube.html
+++ b/HTM-CSS-COURSE/youtube.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/video.css">
+    <link rel="stylesheet" href="styles/sidebar.css">
 
   <body>
     <div class="header">
@@ -34,6 +35,10 @@
         <img class="notifications-icon" src="icons/notifications.svg">
         <img class="current-user-picture" src="channel-profile/unnamed.jpg">
       </div>
+    </div>
+
+    <div class="sidebar">
+      sidebar
     </div>
 
     <div class="video-grid">
