--- a/HTM-CSS-COURSE/youtube.html
+++ b/HTM-CSS-COURSE/youtube.html
@@ -38,10 +38,14 @@
           <img class="upload-icon" src="icons/upload.svg">
           <div class="tooltip">Create</div>
         </div>
-        <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
+        <div class="youtube-apps-icon-container">
+          <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
+          <div class="tooltip">Youtube Apps</div>
+        </div>
         <div class="notifications-icon-container">
            <img class="notifications-icon" src="icons/notifications.svg">
            <div class="notifications-count">3</div>
+           <div class="tooltip">Notifications</div>
         </div>
         <img class="current-user-picture" src="channel-profile/unnamed.jpg">
       </div>
