ISRO-redesign Changes

--- a/ISRO-Redesign/isro.html
+++ b/ISRO-Redesign/isro.html
@@ -57,45 +57,45 @@
           <div class="nav1">
             <p>About &#129175;</p>
             <div class="drop-down-menu">
-              <a>Profile</a>
-              <a>Vission-Mission-Objectives</a>
-              <a>Citizen charter</a>
-              <a>Organisational structure</a>
-              <a>DoS Centers/units/enterprises</a>
-              <a>Secretary, DoS/ Chairman, ISRO</a>
+              <a href="https://www.isro.gov.in/profile.html">Profile</a>
+              <a href="https://www.isro.gov.in/Vision-Mission-Objectives.html">Vission-Mission-Objectives</a>
+              <a href="https://www.isro.gov.in/citizencharter.html">Citizen charter</a>
+              <a href="https://www.isro.gov.in/organisation.html">Organisational structure</a>
+              <a href="https://www.isro.gov.in/isro_centre.html">DoS Centers/units/enterprises</a>
+              <a href="https://www.isro.gov.in/leadership.html">Secretary, DoS/ Chairman, ISRO</a>
             </div>
           </div>
           <div class="nav2">
             <p>Activities &#129175;</p>
             <div class="drop-down-menu">
-              <a>Missions Accomplished</a>
-              <a>Upcoming Mission</a>
-              <a>Science</a>
-              <a>Launchers</a>
-              <a>Satellites</a>
-              <a>Research & Development</a>
+              <a href="https://www.isro.gov.in/Mission.html">Missions Accomplished</a>
+              <a href="https://www.isro.gov.in/FutureMissions.html">Upcoming Mission</a>
+              <a href="https://www.isro.gov.in/Science.html">Science</a>
+              <a href="https://www.isro.gov.in/Launchers.html">Launchers</a>
+              <a href="https://www.isro.gov.in/Satellites.html">Satellites</a>
+              <a href="https://www.isro.gov.in/researchdevelopment.html">Research & Development</a>
             </div>
           </div>
           <div class="nav3">
             <p>Services &#129175;</p>
             <div class="drop-down-menu">
-              <a>Launch Service</a>
-              <a>Satellite: system, bus, sub-system, testing</a>
-              <a>Mission support</a>
-              <a>Ground Systems Support</a>
-              <a>Satellite Communication &Lease of Transponders</a>
-              <a>Space based Earth observation: Bhuvan & Bhoonidhi</a>
+              <a href="https://www.isro.gov.in/launchservices.html">Launch Service</a>
+              <a href="https://www.isro.gov.in/SatelliteSystemBusSubSystemTesting.html">Satellite: system, bus, sub-system, testing</a>
+              <a href="https://www.isro.gov.in/missionsupport.html">Mission support</a>
+              <a href="https://www.isro.gov.in/GroundSystemSupport.html">Ground Systems Support</a>
+              <a href="https://www.isro.gov.in/SatelliteCommunicationApplications.html">Satellite Communication &Lease of Transponders</a>
+              <a href="https://www.isro.gov.in/SpaceBasedEarthObservationServices.html">Space based Earth observation: Bhuvan & Bhoonidhi</a>
             </div>
           </div>
           <div class="nav4">
             <p>Programmes &#129175;</p>
             <div class="drop-down-menu">
-              <a>Academic Courses</a>
-              <a>Conference Grants</a>
-              <a>Fellowships</a>
-              <a>Space Merchandise</a>
-              <a>Space Tutor</a>
-              <a>Space on Wheels</a>
+              <a href="https://www.isro.gov.in/AcademicCourses.html">Academic Courses</a>
+              <a href="https://www.isro.gov.in/Conference_Grants.html">Conference Grants</a>
+              <a href="https://www.isro.gov.in/Fellowships.html">Fellowships</a>
+              <a href="https://www.isro.gov.in/Merchandise.html">Space Merchandise</a>
+              <a href="https://www.isro.gov.in/spacetutor.html">Space Tutor</a>
+              <a href="https://www.isro.gov.in/SpaceOnWheels.html">Space on Wheels</a>
             </div>
           </div>
           <div class="nav5">
@@ -112,12 +112,12 @@
           <div class="nav6">
             <p>Engagements &#129175;</p>
             <div class="drop-down-menu">
-              <a>Profile</a>
-              <a>Vission-Mission-Objectives</a>
-              <a>Citizen charter</a>
-              <a>Organisational structure</a>
-              <a>DoS Centers/units/enterprises</a>
-              <a>Secretary, DoS/ Chairman, ISRO</a>
+              <a href="https://www.isro.gov.in/academia.html">Academia</a>
+              <a href="https://www.isro.gov.in/ISROAPP/login.jsp" target="_blank">Ask an Expert</a>
+              <a href="https://www.isro.gov.in/Educators.html">Educators</a>
+              <a href="https://www.isro.gov.in/Industry.html">Industry</a>
+              <a href="https://www.isro.gov.in/InternshipAndProjects.html">Internship & Projects</a>
+              <a href="https://www.isro.gov.in/Careers.html">Join ISRO</a>
             </div>
           </div>
         </div>
