--- a/JAVASCRIPT-COURSE/10-rock-papers-scissors.html
+++ b/JAVASCRIPT-COURSE/10-rock-papers-scissors.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>09 Rock Paper Scissors Game</title>
-    <link rel="stylesheet" href="10-rock-paper-scissors.css">
+    <link rel="stylesheet" href="styles/10-rock-paper-scissors.css">
   </head>
   <body>
     <p class="title-text">Rock Paper Scissors</p>
@@ -49,6 +49,6 @@
       Reset Score
     </button>
 
-    <script src="10-rock-paper-scissors.js"></script>
+    <script src="scripts/10-rock-paper-scissors.js"></script>
   </body>
 </html>
