--- a/JAVASCRIPT-COURSE/Amazon Project/javascript-amazon-project-main/amazon.html
+++ b/JAVASCRIPT-COURSE/Amazon Project/javascript-amazon-project-main/amazon.html
@@ -56,6 +56,6 @@
       </div>
     </div>
 
-    <script type="module" src="scripts/amazon.js"></script>
+    <script type="module" src="scripts/amazon.js"></script> <!-- ENtry Point -->
   </body>
 </html>
